input decorator working

--- a/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
     <!----hero Section start---->
     <div class="hero">
-      <app-navbar></app-navbar>
+      <app-navbar [menuItems]="navMenus"></app-navbar>
       <app-content></app-content>
     </div>
 
