--- a/src/app/dashboard/navbar/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar/navbar.component.html
@@ -1,11 +1,9 @@
 <nav>
   <h2 class="logo">Fin<span>Flex</span></h2>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About Us</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">Skills</a></li>
-    <li><a href="#">Contact Us</a></li>
+    <li *ngFor="let item of menuItems">
+      <a>{{item}}</a>
+    </li>
   </ul>
   <a href="#" class="btn">Subscribe</a>
 </nav>
