normal service with sample response json

--- a/src/app/dashboard/navbar/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar/navbar.component.html
@@ -5,5 +5,5 @@
       <a>{{item}}</a>
     </li>
   </ul>
-  <a href="#" class="btn">Subscribe</a>
+  <a routerLink="/subscribe" class="btn">Subscribe</a>
 </nav>
