--- a/src/app/subscribe/components/subscribe/subscribe.component.html
+++ b/src/app/subscribe/components/subscribe/subscribe.component.html
@@ -1,1 +1,7 @@
-<p>subscribe works!</p>
+<form>
+  <label>Enter first name</label><br>
+  <input type="text" name="firstname"><br>
+  <label>Enter last name</label><br>
+  <input type="text" name="lastname"><br>
+  <p><strong>Note:</strong>The default maximum cahracter lenght is 20.</p>
+</form>  
