--- a/src/app/dashboard/content/content/content.component.html
+++ b/src/app/dashboard/content/content/content.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <h4>Hello, my name is</h4>
-  <h1>Ankit <span>Rai</span></h1>
+  <!-- <h1>Ankit <span>Rai</span></h1> -->
   <h3>I'am a Web Developer.</h3>
   <div class="newslatter">
     <form>
